tests/testcases/errors/BCE0043-1.boo
"""
BCE0043-1.boo(4,12): BCE0043: Unexpected token: gf.
"""
print(0xab3gf)

